@@ -5,13 +5,13 @@ Description: Builds platform design information packages.
   data such as x, y position on chip and
   featureSet ID. The database also incorporates featureSet-level
   annotation data. The products of this packages are used by the oligo pkg.
-Version: 1.7.12
+Version: 1.7.13
 Author: Seth Falcon, Benilton Carvalho with contributions by Vince Carey and Matt Settles
 Maintainer: Benilton Carvalho <bcarvalh@jhsph.edu>
 LazyLoad: yes
 Depends: R (>= 2.6.0), methods, Biobase (>= 1.13.58),
          RSQLite (>= 0.4-15), affxparser (>= 1.7.2),
-         oligo (>= 1.7.24)
+         oligo (>= 1.7.25)
 Imports: Biobase (>= 1.13.58), Biostrings, IRanges
 License: Artistic-2.0
 Collate: AllClasses.R
@@ -49,5 +49,6 @@ Collate: AllClasses.R
          pdBuilderV2Gene.R
          pdBuilderV2AffyTiling.R
          pdBuilderV2NgsExpression.R
+         pdBuilderV2AffyExpressionHT.R
 biocViews: Annotation, Infrastructure
 
